# main.go
@@ -21,7 +21,6 @@ func main() {
 	v1 := r.Group("/v1")
 	v1.POST("/namespace/onboard", handler.OnboardNamespace)
 	v1.POST("/namespace/migrate", handler.MigrateNamespace)
-	v1.DELETE("namespace/onboard/:namespace", handler.DeleteNamespace)
 	v1.POST("/brid/onboard", handler.OnboardBrid)
 	v1.POST("/iamuser/onboard", handler.OnboardIamUser)
 	v1.DELETE("/iamuser/:username", handler.DeleteIamUser)
